<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignInActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/cclLogo"
        android:src="@mipmap/ic_ccllogo"
        android:paddingTop="@dimen/table_row_padding"
        android:paddingBottom="@dimen/table_row_padding"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_email_layout"
        android:hint="@string/user_email"
        android:padding="@dimen/table_row_padding_small">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/primaryLightColor"
            android:inputType="textEmailAddress"
            android:id="@+id/sign_userEmail"
            android:textColor="?android:textColorPrimary"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_password_layout"
        android:hint="@string/user_password"
        android:padding="@dimen/table_row_padding_small">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/primaryLightColor"
            android:inputType="textPassword"
            android:id="@+id/sign_userPassword"
            android:textColor="?android:textColorPrimary"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pass_reset"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textAppearance="@style/Widget.MaterialComponents.Button"
        android:text="@string/pass_reset"
        android:textColor="@color/primaryDarkColor"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_SignON"
        android:text="@string/sign"
        android:textAlignment="center"
        android:textStyle="bold"
        android:backgroundTint="@color/secondaryDarkColor"
        android:padding="@dimen/table_row_padding"
        android:elevation="@dimen/table_row_padding_small"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/table_row_padding"
        android:id="@+id/btn_PhoneSign"
        android:text="@string/passwordless"
        android:textAlignment="center"
        android:textStyle="bold"
        android:backgroundTint="@color/secondaryDarkColor"
        android:elevation="@dimen/table_row_padding_small"
        />

</LinearLayout>