<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.reports.ReportsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/device_type"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/report_customers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/customer_name"
                android:inputType="none"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:background="@drawable/button_customization"
            android:src="@drawable/ic_baseline_cloud_download_48"
            android:contentDescription="@string/cclLogo"

            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/customerInventory"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:id="@+id/exportButton"
        android:layout_gravity="bottom"
        android:textColor="@color/white"
        android:background="@drawable/button_customization"
        android:text="@string/exportReport"
        android:elevation="@dimen/table_row_padding_small"
        style="@style/TextAppearance.AppCompat.Widget.Button"
        android:layout_height="wrap_content"/>

</LinearLayout>